--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Usman Malik | Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Usman Malik | Developer Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello 👋</h1>
-  <h2>I am Usman Malik</h2>
-  <p>This is my GitHub portfolio website.</p>
+  <header>
+    <div class="container">
+      <h1>Hi, I'm <span>Usman Malik</span></h1>
+      <p>Web Developer | Open Source Enthusiast | Problem Solver</p>
+      <a href="#projects" class="btn">View Projects</a>
+    </div>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a passionate developer who loves building modern, responsive web applications and contributing to open-source projects. Skilled in HTML, CSS, JavaScript, and GitHub workflows.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-grid">
+      <div class="project-card">
+        <h3>Project One</h3>
+        <p>Short description of the project.</p>
+        <a href="#" target="_blank">View Code</a>
+      </div>
+      <div class="project-card">
+        <h3>Project Two</h3>
+        <p>Short description of the project.</p>
+        <a href="#" target="_blank">View Code</a>
+      </div>
+      <div class="project-card">
+        <h3>Project Three</h3>
+        <p>Short description of the project.</p>
+        <a href="#" target="_blank">View Code</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:usman@example.com">usman@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/usman" target="_blank">linkedin.com/in/usman</a></p>
+    <p>GitHub: <a href="https://github.com/usmanmalik" target="_blank">github.com/usmanmalik</a></p>
+  </section>
+
+  <footer>
+    <p>© 2026 Usman Malik. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
