--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a passionate developer who loves building modern, responsive web applications and contributing to open-source projects. Skilled in HTML, CSS, JavaScript, and GitHub workflows.</p>
+    <p>I am a passionate developer who loves building modern, responsive web applications and contributing to open-source projects. Skilled in HTML, CSS, JavaScript, and C-sharp.</p>
   </section>
 
   <section id="projects">
